--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,7 @@ dependencies {
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
+    implementation 'com.applandeo:material-calendar-view:1.7.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
 
 }
