--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CreateGroupFragment"></activity>
-        <activity android:name=".ConfrimGroup"></activity>
+        <activity
+            android:name=".CreateGroupFragment"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".ConfrimGroup"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 </manifest>
